Array List working with a compareElement and value.